--- a/Persona.html
+++ b/Persona.html
@@ -8,7 +8,7 @@
                 <h1>Datos Personales</h1>
                 <body style="background-image: url('fondo1.jpg'); background-repeat: no-repeat; background-size: cover;"></body>
                 <div align="center">
-                <img src="Img/yo.jpg" alt"ese soy yo"height = "300" width = "200"><br>
+                <img src="yo.jpg" alt"ese soy yo"height = "300" width = "200"><br>
                 </div
                 <font size="12"><b>Nombre: Jairo <br>
                 Apellidos: Garcia Ambrocio<br>
