--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       </head>
       <body style="background-image: url('fondo0.jpg'); background-repeat: no-repeat; background-size: cover;"></body>
     <body alink="blue" vlink="red" link="black">
-     <a title="Koala" href="koala.jpg"><img src="koala.jpg" alt="El koala" border="10px" height="250px" width="400px"></a>
+     <a title="Koala" href="koala.jpg"><img src="Koala.jpg" alt="El koala" border="10px" height="250px" width="400px"></a>
      <a href="Persona.html">*Datos Personales*</a>
      <a href="Estudio.html">*Datos Estudios*</a>
      <a href="Otro.html">*Otros*</a>
